--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ h2 {
 }
 
 #status > p {
-    font-size: 200%;
+    font-size: 150%;
     font-weight: 700;
     text-transform: uppercase;
     color: darkgoldenrod;
@@ -47,34 +47,41 @@ h2 {
     padding: 1rem 0;
 }
 
-#stats table {
-    background-color: rgba(0,0,0,0.7);
-    padding: 1rem;
-    width: 80%;
-}
-
-#stats th, #stats td {
-    width: 30%;
-    padding: 0 2%;
-}
-
-#stats th {
-    font-size: 150%;
-    color: lightgray;
-    font-weight: 200;
-    text-transform: uppercase;
-
-}
-
-#stats td {
-    font-size: 200%;
-    color: darkgoldenrod;
-    font-weight: 700;
-    padding: 1rem;
-}
-
 .btn {
     font-size: 150%;
     margin: 0 1rem;
     cursor: pointer;
+}
+
+.stat-container {
+    width: 100%;
+    height: 4vh;
+    display: flex;
+    margin: 1rem 0;
+}
+
+.outer {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    border: 2px inset #999;
+  }
+
+  .outer > p {
+      position: absolute;
+      right: 1rem;
+      top: 0.5vh;
+      font-size: 130%;
+      font-weight: 700;
+      text-transform: uppercase;
+      color: rgba(0,0,0,0.4);
+      margin: 0;
+  }
+
+.inner {
+    width: 50%;
+    height: 100%;
+    background-color: darkgoldenrod;
+    transition: width 0.5s;
 }
