--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,10 @@ h2 {
     margin: 2vh auto;
 }
 
+#status > p {
+    box-shadow: 0 0 1rem #666;
+}
+
 #stats {
     display: flex;
     flex-direction: column;
@@ -65,23 +69,35 @@ h2 {
     width: 100%;
     height: 100%;
     background-color: transparent;
-    border: 2px inset #999;
+    border: 1px solid #999;
+    box-shadow: 0 0 1rem #999;
   }
 
   .outer > p {
-      position: absolute;
-      right: 1rem;
-      top: 0.5vh;
       font-size: 130%;
       font-weight: 700;
+      line-height: 4vh;
       text-transform: uppercase;
-      color: rgba(0,0,0,0.4);
+      text-shadow: 1px 1px 0 rgba(255,255,255,0.6);
+      color: rgba(0,0,0,0.5);
       margin: 0;
+  }
+
+  .outer .label {
+    position: absolute;
+    left: 1rem;
+  }
+
+  .outer .value {
+    position: absolute;
+    right: 1rem;
   }
 
 .inner {
     width: 50%;
     height: 100%;
-    background-color: darkgoldenrod;
+    background-color: rgba(0,0,0,0.7);
+    /* background: linear-gradient(-170deg, #cb356b 0%, #bd3f32 100%); */
     transition: width 0.5s;
+    transition-timing-function: ease;
 }
