--- a/styles.css
+++ b/styles.css
@@ -31,10 +31,6 @@ h2 {
     margin: 2vh auto;
 }
 
-#status > p {
-    box-shadow: 0 0 1rem #666;
-}
-
 #stats {
     display: flex;
     flex-direction: column;
@@ -46,15 +42,28 @@ h2 {
     font-size: 150%;
     font-weight: 700;
     text-transform: uppercase;
-    color: darkgoldenrod;
+    color: rgb(184, 134, 11);
     background-color: rgba(0,0,0,0.7);
     padding: 1rem 0;
+    box-shadow: 0 0 1rem #999;
 }
 
 .btn {
-    font-size: 150%;
+    font-size: 100%;
     margin: 0 1rem;
     cursor: pointer;
+    background-color: rgba(0,0,0,0.7);
+    color: white;
+    text-transform: uppercase;
+    padding: 0.5rem 1.5rem;
+    border: 1px solid #aaa;
+    border-radius: 1rem;
+    box-shadow: 0 0 1rem #999;
+}
+
+.btn:hover {
+    border-color: #555;
+    color: #aaa;
 }
 
 .stat-container {
@@ -69,17 +78,17 @@ h2 {
     width: 100%;
     height: 100%;
     background-color: transparent;
-    border: 1px solid #999;
+    border: 1px solid #aaa;
     box-shadow: 0 0 1rem #999;
   }
 
   .outer > p {
-      font-size: 130%;
-      font-weight: 700;
+      font-size: 120%;
+      font-weight: 400;
       line-height: 4vh;
       text-transform: uppercase;
-      text-shadow: 1px 1px 0 rgba(255,255,255,0.6);
-      color: rgba(0,0,0,0.5);
+      text-shadow: 1px 1px 0 rgba(0,0,0,0.5);
+      color: rgb(170, 170, 170);
       margin: 0;
   }
 
@@ -91,6 +100,7 @@ h2 {
   .outer .value {
     position: absolute;
     right: 1rem;
+    font-weight: 700;
   }
 
 .inner {
@@ -100,4 +110,5 @@ h2 {
     /* background: linear-gradient(-170deg, #cb356b 0%, #bd3f32 100%); */
     transition: width 0.5s;
     transition-timing-function: ease;
+    box-shadow: 2px 0 0.2rem #555;
 }
