--- a/styles.css
+++ b/styles.css
@@ -15,11 +15,10 @@ h2 {
 }
 
 #container {
-    width: 50vw;
-    max-width: 600px;
+    width: 84vw;
     background-color: rgba(255,255,255,0.6);
-    padding: 1rem;
-    margin: 6rem auto;
+    padding: 4vw;
+    margin: 1rem auto;
     display: flex;
     flex-direction: column;
     border-radius: 10px;
@@ -28,8 +27,8 @@ h2 {
 }
 
 #status, #stats, #controls, #restart {
-    width: 80%;
-    margin: 2vh auto;
+    width: 90%;
+    margin: 0 auto;
 }
 
 #stats {
@@ -40,8 +39,6 @@ h2 {
 }
 
 #status > p {
-    font-size: 140%;
-    /* font-weight: 700; */
     text-transform: uppercase;
     color: rgb(184, 134, 11);
     background-color: rgba(0,0,0,0.7);
@@ -51,20 +48,19 @@ h2 {
 
 .btn {
     font-size: 100%;
-    margin: 0 1rem;
+    margin: 0 0.2rem;
     cursor: pointer;
     background-color: rgba(0,0,0,0.7);
     color: white;
     text-transform: uppercase;
-    padding: 0.5rem 1.5rem;
+    padding: 0.5rem;
     border: 1px solid #aaa;
-    border-radius: 1rem;
+    border-radius: 0.3rem;
     box-shadow: 0 0 1rem #999;
 }
 
-.btn:hover {
-    border-color: #555;
-    color: #aaa;
+#restart {
+    margin-top: 4vh;
 }
 
 .stat-container {
@@ -113,3 +109,32 @@ h2 {
     transition-timing-function: ease;
     box-shadow: 2px 0 0.2rem #555;
 }
+
+/*** MEDIA QUERIES ***/
+@media screen and (min-width: 600px) {
+    #container {
+        width: 80vw;
+        max-width: 600px;
+        margin: 6rem auto;
+    }
+
+    #status, #stats, #controls, #restart {
+        width: 80%;
+        margin: 2vh auto;
+    }
+
+    #status > p {
+        font-size: 140%;
+    }
+
+    .btn {
+        padding: 0.5rem 1.5rem;
+        margin: 0 1rem;
+        border-radius: 1rem;
+    }
+
+    .btn:hover {
+        border-color: #555;
+        color: #aaa;
+    }
+  }
